2015-08-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Texinfo Mode): Move to an appendix.
	(Command Contexts): Make a top-level appendix.  Remove some 
	unnecessary words.
	(Command Syntax, Formatting Commands): Merge.  Distinguish 
	commands taking an argument on a line from commands starting a 
	block.  Also mention that there other exceptions than @refill, 
	like @tab.

2015-08-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (@ftable @vtable): Mention that @itemx as 
	well as @item creates an index entry.

2015-08-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/info-stnd.texi (Variables): Replace @table with @vtable 
	and remove @vindex lines.

2015-08-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* NEWS, doc/info-stnd.texi (Variables): Document 'follow-strategy'.

2015-08-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/XSParagraph.xs,
	* tp/Texinfo/Convert/XSParagraph/xspara.c: Update some comments 
	and remove some commented-out code.

2015-08-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Info Format Specification): Uncomment 
	material on node quoting, and add advice not to use it until 
	it's more widely supported.

2015-08-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Common.pm (@variable_string_settables): Add 
	'INFO_SPECIAL_CHARS_QUOTE'.
	* tp/Texinfo/Convert/Info.pm (_node) <INFO_SPECIAL_CHARS_QUOTE>: 
	Add quoting characters around node name if required.
	* tp/Texinfo/Convert/Plaintext.pm (_convert) <xrefs and menus>
	<INFO_SPECIAL_CHARS_QUOTE>: Add quoting characters around 
	segments of cross-references and menu entries if they contain 
	problematic characters.
	<xrefs> <INFO_SPECIAL_CHARS_WARNING>: Warn if a node name 
	contains a full stop even if it is not followed by whitespace, 
	as this still breaks readers.

2015-08-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/HTML.pm (_convert_enumerate_command): Use