@@ -1,5 +1,14 @@
 2015-08-14  Gavin Smith  <gavinsmith0123@gmail.com>
 
+	* info/info-utils.c (printed_representation): Remove code 
+	looking at value of ISO_Latin_p, which doesn't do anything.  (It 
+	hasn't done much since the display routines became locale-aware.)
+	* info/terminal.c (ISO_Latin_p): Move declaration of variable to 
+	this file.
+	* info/info-stnd.texi (Variables) <ISO-Latin>: Update.
+
+2015-08-14  Gavin Smith  <gavinsmith0123@gmail.com>
+
 	* doc/texinfo.texi (Texinfo Mode): Move to an appendix.
 	(Command Contexts): Make a top-level appendix.  Remove some 
 	unnecessary words.
